--- a/ZenTask/package.json
+++ b/ZenTask/package.json
@@ -4,6 +4,7 @@
   "description": "to-do list app",
   "main": "main.js",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sweetchai-studio",
